--- a/sitecopy/trunk/doc/sitecopy.fr.1
+++ b/sitecopy/trunk/doc/sitecopy.fr.1
@@ -1,10 +1,10 @@
 .\" Copyright 1999-2001 Joe Orton
 .\" Relecture Gérard Delafond
-.TH sitecopy 1 "June 2001" sitecopy "User Manuals"
+.TH SITECOPY 1 "1er juin 2001" sitecopy "Manuel de l'utilisateur Linux"
 .SH NOM
 sitecopy \- Maintient à jour des copies distantes de sites web
 .SH SYNOPSIS
-.B sitecopy [options] [mode opératoire] 
+.B sitecopy [options] [mode opératoire]
 .I nomdusite
 .B ...
 .SH DESCRIPTION
@@ -20,17 +20,13 @@ déplacés localement pour les déplacer sur le site distant.
 
 FTP, WebDAV et autres serveurs de publication basés sur HTTP (comme
 par exemple AOLserver et Netscape Enterprise) sont également gérés.
-
 .SH POUR COMMENCER
-
 Cette section explique comment mettre en place la maintenance d'un
 site web à l'aide de \fBsitecopy\fP. Après avoir présenté les
 rudiments, on examinera deux situations\ : d'abord celle où vous avez
 déjà placé votre site sur le serveur distant, puis celle où vous ne
 l'avez pas encore fait.
-
 .SS Rudiments
-
 Si vous ne l'avez pas déjà fait, il vous faut créer un fichier de
 configuration qui contiendra les informations relatives aux sites que
 vous désirer administrer. Vous devez également créer un répertoire
@@ -53,9 +49,7 @@ configuration, utilisez les commandes
 depuis votre répertoire personnel. Ceci fait, éditez le fichier de
 configuration pour ajouter les détails relatifs à votre site comme
 indiqué à la section CONFIGURATION.
-
 .SS Si le site distant existe déjà
-
 Si vous aviez déjà placé votre site sur le serveur distant,
 assurez-vous que vos fichiers locaux soient synchronisés avec les
 fichiers distants. Ensuite, lancez
@@ -83,9 +77,7 @@ succès, tapez
 .br
 pour télécharger une copie locale. N'effectuez PAS ces opérations si
 vous avez déjà une copie locale de votre site.
-
 .SS Si le site distant n'existe pas encore
-
 Assurez-vous que l'administrateur ait bien créé la racine du site
 distant. Tapez
 .br
@@ -94,9 +86,7 @@ distant. Tapez
 où nomdusite est le nom du site que vous avez indiqué après le mot-clé
 .B site
 dans le fichier de configuration.
-
 .SS Maintenance du site
-
 Après avoir mis en place le site comme décrit dans une des deux
 sections ci-dessus, vous pouvez commencer à éditer vos fichiers locaux
 normalement. Lorsque vous en avez fini avec un ensemble de
@@ -108,7 +98,7 @@ votre site, tapez
 et tous les fichiers modifiés seront remontés sur serveur. Tout
 fichier localement supprimé sera également suppprimé sur le serveur, à
 moins que l'option
-.B nodelete 
+.B nodelete
 n'ait été spécifiée dans le fichier de configuration. Si vous déplacez
 un ou plusieurs fichiers entre deux répertoires, leurs copies
 distantes seront supprimées du serveur, puis remontées à nouveau, à
@@ -122,9 +112,7 @@ au site local depuis la dernière mise à jour, pour pouvez lancer
 .B "	sitecopy nomdusite"
 .br
 qui affichera la liste des différences.
-
 .SS Problèmes de synchronisation
-
 Dans certaines circonstances, les fichiers qui constituent réellement
 le site distant diffèrent de ce que \fBsitecopy\fP
 .I pense
@@ -135,9 +123,7 @@ devriez utiliser le
 .B mode récupération
 pour retrouver du serveur distant la liste des fichier qui constitue
 le site.
-
 .SH INVOCATION
-
 Pour une opération normale, spécifiez un
 .I simple
 mode opératoire, suivi par les options que vous avez choisies, puis un
@@ -147,7 +133,6 @@ ou plusieurs nom de sites. Par exemple,
 .br
 mettra à jour silencieusement les sites appelés «\ siteprincipal\ »
 et «\ autresite\ ».
-
 .SH MODES OPÉRATOIRES
 .IP "-l, --list"
 .B Mode Liste
@@ -180,7 +165,7 @@ Ce mode écrase les fichiers locaux. À utiliser avec précaution.
 .IP "-i, --initialize"
 .B Mode Initialisation
 \- initialise les sites spécifiés, \fBsitecopy\fP pensant alors qu'il
-n'y a AUCUN fichier sur le serveur distant. 
+n'y a AUCUN fichier sur le serveur distant.
 .IP "\-c, \-\-catchup"
 .B Mode Rendre identique
 \- amène \fBsitecopy\fP à penser que les copies locale et distante du
@@ -256,7 +241,6 @@ récupération FTP\ :
 .br
 .B "	sitecopy --debug=ftp,socket --fetch nomdusite"
 .br
-
 .SH CONCEPTS
 L'
 .B état stocké
@@ -269,9 +253,7 @@ mise à jour, \fBsitecopy\fP construit une
 pour chaque site en parcourant le répertoire local, prend connaissance
 de l'état stocké et, en comparant les deux, détermine quels fichiers
 ont changé, lesquels ont été déplacés, et ainsi de suite.
-
 .SH CONFIGURATION
-
 La configuration est assurée par le fichier de configuration (fc). Ce
 fichier contient une ou plusieurs définitions de sites. Un nom unique
 est attribué à chaque définition de site\ ; c'est par ce nom qu'on se
@@ -281,9 +263,7 @@ Chaque définition de site contient les détails du serveur sur lequel
 est stocké le site, la manière dont on peut accéder à ce serveur,
 l'emplacement local et distant du site, ainsi que des options pour ce
 site si nécessaire.
-
 .SS Définition d'un site
-
 La définition d'un site est constituée d'une série de lignes\ :
 
 
@@ -296,10 +276,10 @@ La définition d'un site est constituée d'une série de lignes\ :
 .BR "   local " répertoire-racine-local
 .br
 .br
- [ 
+ [
 .BR port " numéro-de-port ]"
 .br
- [ 
+ [
 .BR username " utilisateur ]"
 .br
  [
@@ -308,48 +288,48 @@ La définition d'un site est constituée d'une série de lignes\ :
 .BR "proxy-server " nom-du-proxy
 .br
 .BR "   proxy-port " "numero-port-proxy ]"
- [ 
+ [
 .BR "url " "URL-du-site ]"
 .br
- [ 
+ [
 .BR "protocol " "{ ftp | webdav } ]"
 .br
- [ 
+ [
 .BR ftp " nopasv ]"
 .br
  [
 .BR ftp " showquit ]"
 .br
- [ 
+ [
 .BR ftp " { usecwd | nousecwd } ]"
 .br
- [ 
+ [
 .BR http " expect ]"
 .br
- [ 
+ [
 .BR http " secure ]"
- [ 
+ [
 .BR safe " ]"
 .br
- [ 
+ [
 .BR "state " "{ checksum | timesize } ]"
- [ 
+ [
 .BR permissions " { ignore | exec | all } ]"
- [ 
+ [
 .BR symlinks " { ignore | follow | maintain } ]"
- [ 
+ [
 .BR nodelete " ]"
- [ 
+ [
 .BR nooverwrite " ]"
- [ 
+ [
 .BR checkmoved " [renames] ]"
  [
 .BR tempupload " ]"
- [ 
+ [
 .BR exclude " motif ]..."
- [ 
+ [
 .BR ignore " motif ]..."
- [ 
+ [
 .BR ascii " motif ]..."
 
 Tout ce qui suit le caractère # sur une ligne est considéré comme un
@@ -374,7 +354,7 @@ utilisé, ou bien par le numéro indiqué par le mot-clé
 .B protocol
 spécifie lequel utiliser, en prenant comme valeur
 .B webdav
-ou 
+ou
 .B ftp
 respectivement. Le protocole par défaut est FTP.
 
@@ -394,8 +374,8 @@ Si le serveur ne permet la remontée des fichiers que dans le
 répertoire courant, utilisez le mot-clé
 .B ftp usecwd
 (un symptôme possible est le message\ : "overwrite permission
-denied"). 
-Notez que le répertoire racine distant (mot-clé 
+denied").
+Notez que le répertoire racine distant (mot-clé
 .B remote\fP)
 doit être un chemin absolu (qui commence par '/'), sans quoi
 .B usecwd
@@ -403,18 +383,18 @@ sera ignoré.
 
 Si le serveur WebDAV utilise correctement le message d'attente
 100-continue, comme par exemple Apache version 1.3.9 et supérieure,
-utilisez le mot-clé 
+utilisez le mot-clé
 .B http expect.
 Cela peut économiser de la bande passante ainsi que réduire le temps
 nécessaire à une mise à jour.
 
-Pour authentifier l'utilisateur sur le serveur, utilisez les mots-clés 
+Pour authentifier l'utilisateur sur le serveur, utilisez les mots-clés
 .B username
-et 
-.B password. 
+et
+.B password.
 Si le mot de passe n'est pas spécifié, il sera recherché dans le fichier
 .B ~/.netrc
-s'il existe. Voyez ftp(1) pour la syntaxe de ce fichier. 
+s'il existe. Voyez ftp(1) pour la syntaxe de ce fichier.
 
 Pour le protocole WebDAV, l'authentification basique et par condensé
 (digest authentication) sont gérées. Notez que vous ne devriez pas
@@ -427,7 +407,7 @@ avec le mot-clé
 Elle n'est utilisée qu'en mode liste plate, afin qu'elle puisse
 figurer dans les pages«\ Changements récents\ ». L'URL ne doit
 .I pas
-se terminer par une barre oblique (/)\ ; un exemple valide est 
+se terminer par une barre oblique (/)\ ; un exemple valide est
 .br
 .BR "	url " http://www.site.com/monsite
 
@@ -435,16 +415,14 @@ Si vous spécifiez l'option
 .B tempupload,
 les fichiers modifiés sont transmis au serveur distant avec un
 préfixe «\ .in.\ », puis renommés (par déplacement) en leur nom d'origine
-une fois remontés complètement. 
-
+une fois remontés complètement.
 .SS État des fichiers
-
 L'état d'un fichier est conservé dans le fichier de stockage associé
 (dans ~/.sitecopy/*), et sert à déterminer quand le fichier a été
 modifié. Il y a deux méthodes possibles, qui peuvent être choisies via
-le mot-clé 
+le mot-clé
 .B state
-, avec comme paramètre 
+, avec comme paramètre
 .B timesize
 (par défaut), ou
 .B checksum.
@@ -463,13 +441,10 @@ exemple si vous utilisez un système de gestion de versions qui change
 la date de dernière modification des fichiers à chaque extraction
 d'une copie de travail («\ checkout\ »), alors que le contenu des fichiers
 n'est en réalité pas modifié.
-
-
 .SS Mode Sécurisé
-
-Vous pouvez passer en 
+Vous pouvez passer en
 .B Mode Sécurisé
-grâce au mot-clé 
+grâce au mot-clé
 
 .B safe.
 Dans ce mode, chaque fois qu'un fichier est remonté sur le serveur, la
@@ -493,10 +468,8 @@ moins égale à 0.9.11.
 Le mode sécurisé ne peut être utilisé conjointement avec l'option
 .B nooverwrite
 (voir plus bas).
-
 .SS Emplacements de stockage des fichiers du site
-
-Le mot-clé 
+Le mot-clé
 .B remote
 spécifie le répertoire racine de la copie distante du site. Vous
 pouvez le donner sous la forme d'un chemin absolu, comme\ :
@@ -526,12 +499,11 @@ sont équivalents, si $HOME est fixé à «\ /home/fred\ ».
 
 Pour les deux mots-clés local et remote, le chemin spécifié peut se
 terminer par une barre oblique, mais ça n'est pas obligatoire.
-
 .SS Traitement des permissions des fichiers
 Le traitement des permissions des fichiers est contrôlé par le mot-clé
 .B permissions
 , qui peut prendre une de ces trois valeurs\ :
-.TP 
+.TP
 .B ignore
 pour ignorer complètement les permissions des fichiers,
 .TP
@@ -546,9 +518,7 @@ permissions de vos scripts CGI soient correctes. Cette option est pour
 le moment ignorée des serveurs WebDAV. Avec les serveurs FTP, un
 .B chmod
 est exécuté côté serveur pour modifier les permissions.
-
 .SS Traitement des liens symboliques
-
 Les liens symboliques trouvés sur le site local peuvent être au choix
 ignorés, suivis ou maintenus. En mode «\ follow\ », le fichier
 référencé par un lien symbolique sera remonté à l'emplacement
@@ -565,9 +535,7 @@ ou
 Le mode par défaut est
 .B ignore,
 i.e. les liens symboliques trouvés sur la copie locale du site sont ignorés.
-
 .SS Maintenance des liens symboliques
-
 Ce mode est n'actuellement supporté que par les serveurs WebDAV
 implémentant WebDAV Advanced Collections, qui est en cours de
 développement. Dans ce mode, la cible du lien sur le serveur est
@@ -578,9 +546,8 @@ vous pouvez utiliser des URL si vous le désirez\ :
 
 De cette façon , un ordre "302 Redirect" peut être facilement mis en
 place depuis le client, sans altérer la configuration du serveur.
-
 .SS Suppression et déplacememnt des fichiers distants
-Vous pouvez utiliser l'option 
+Vous pouvez utiliser l'option
 .B nodelete
 pour empêcher les fichiers distants d'être jamais supprimés. Cela peut
 être utile si vous conservez de grosses quantités de données sur le
@@ -610,15 +577,13 @@ ou renommés. Cette option n'est utilisable qu'en conjonction avec l'option
 Si vous n'utilisez pas de somme de contrôle MD5 pour déterminer l'état
 des fichiers (i.e. avec l'option
 .B state checksum
-) N'UTILISEZ PAS non plus l'option 
+) N'UTILISEZ PAS non plus l'option
 .B checkmoved
 si vous avez tendance à mettre dans des répertoires différents des
 fichiers de même nom, taille et date de modification. Le risque
 d'écrasement est improbable, mais ne dites pas que vous n'aviez pas
 été prévenu.
-
 .SS Exclure des fichiers
-
 Certains fichiers peuvent être ignorés de \fBsitecopy\fP par l'emploi
 du mot-clé
 .B exclude,
@@ -644,7 +609,7 @@ barre oblique. Par exemple,
 .br
 .BR "	exclude " "/files/*.gz"
 .br
-excluera tous les fichiers à l'extension .m4 dans le sous-répertoire 
+excluera tous les fichiers à l'extension .m4 dans le sous-répertoire
 «\ docs\ », et tous les fichiers à l'extension .gz dans le sous-répertoire
 «\ files\ ».
 
@@ -662,9 +627,7 @@ le répertoire local. Un fichier qui correspond à n'importe lequel
 des motifs ne sera pas ajouté à la liste des fichiers. Cela signifie
 qu'un fichier déjà remonté sur le serveur qui correspond à un motif
 d'exclusion sera supprimé du serveur.
-
 .SS Ignorer les changements des fichiers locaux
-
 Utilisez l'option
 .B ignore
 pour indiquer à \fBsitecopy\fP qu'il doit ignorer les modifications
@@ -682,9 +645,7 @@ s'utilise de la même manière que l'option
 Notez que le mode synchronisation
 .B écrasera
 les changements apportés aux fichiers ignorés.
-
 .SS Mode de transfert par FTP
-
 Pour spécifier le mode de transfert des fichiers par FTP, utilisez le mot-clé
 .B ascii.
 Tout fichier transféré en utilisant le mode ASCII verra ses caractères
@@ -695,29 +656,22 @@ exemple, utilisez
 .br
 pour remonter tous les fichiers à l'extension .pl comme des fichiers
 texte ASCII. Ce mot-clé est actuellement sans effet avec les serveurs WebDAV.
-
 .SH VALEURS DE RETOUR
-
 Les valeurs de retour possibles dépendent du mode opératoire. Si
 plusieurs sites sont spécifiés en ligne de commande, la valeur de
 retour correspondra aux opérations effectuées pour le dernier des
 sites spécifiés.
-
 .SS Pour le mode mise à jour
  -1 ... la mise à jour n'a pas pu démarrer - problème de configuration
   0 ... la mise à jour s'est parfaitement effectuée.
   1 ... il y a eu un problème pendant la mise à jour
   2 ... impossible de se connecter ou s'authentifier auprès du serveur
-
 .SS Pour le mode liste (mode par défaut)
  -1 ... impossible de former la liste - problème de configuration
   0 ... le site distant n'a pas besoin de mise à jour
   1 ... le site distant nécessite une mise à jour
-
 .SH CONTENU DU FICHIER DE CONFIGURATION D'EXEMPLE
-
 .SS Serveur FTP, usage simple
-
 Le site de Fred est remonté sur un serveur FTP nommé «\ my.server.com\ »
 et maintenu dans le répertoire «\ public_html\ » situé dans le répertoire
 de connexion. Le site est conservé en local dans le répertoire
@@ -730,9 +684,7 @@ site mysite
   password juniper
   local /home/fred/html/
   remote ~/public_html/
-
 .SS Serveur FTP, usage avancé
-
 Ici, le site de Freda est remonté sur un serveur FTP nommé «\ ftp.elsewhere.com\ »
 et maintenu dans le répertoire /www/freda. Le site
 est conservé en local dans le répertoire /home/freda/sites/elsewhere/
@@ -743,7 +695,7 @@ site anothersite
   password blahblahblah
   local /home/freda/sites/elsewhere/
   remote /www/freda/
-  # Freda veut ignorer les fichiers à l'extension .bak ou 
+  # Freda veut ignorer les fichiers à l'extension .bak ou
   # se terminant par un ~:
   exclude *.bak
   exclude *~
@@ -756,13 +708,12 @@ site supersite
   server dav.wow.com
   protocol webdav
   username pow
-  password zap 
+  password zap
   local /home/joe/www/super/
   remote /
-
 .SH FICHIERS
 .I ~/.sitecopyrc
-Emplacement par défaut du fichier de configuration. 
+Emplacement par défaut du fichier de configuration.
 .br
 .I ~/.sitecopy/
 Répertoire de stockage des informations sur les fichiers du site distant.
@@ -770,22 +721,20 @@ Répertoire de stockage des informations sur les fichiers du site distant.
 .I ~/.netrc
 Informations relatives aux comptes sur des serveurs distants.
 .br
-
 .SH BOGUES
 Problèmes connus\ : Les modes récupération et synchronisation ne sont
 PAS fiables avec le protocole FTP. Si vous avez besoin d'opérations
 atomiques de récupération d'informations et de synchronisation de
 fichiers, n'utilisez pas sitecopy\ ; essayez plutôt rsync.
-
 .PP
 Veuillez envoyer vos rapports d'anomalies et demandes d'améliorations
 à <sitecopy@lyra.org> plutôt qu'à l'auteur lui-même, puisque la liste
 de diffusion archive ses messages et les vôtres pourraient être utiles à
 d'autres utilisateurs.
-
 .SH VOIR AUSSI
-rsync(1), ftp(1), mirror(1)
-
+.BR rsync (1),
+.BR ftp (1),
+.BR mirror (1)
 .SH STANDARDS
 
 [Cités seulement pour référence, l'auteur ne revendique aucune
@@ -825,4 +774,3 @@ Nicolas Girard <\fIgirard_nicolas at yahoo.fr\fR>, 2004.
 .SH AVERTISSEMENT SUR LA TRADUCTION
 Il est possible que cette traduction soit imparfaite ou périmée. En cas de doute, veuillez vous reporter
 au document original en langue anglaise fourni avec le programme.
-
